[package]
name = "si_emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = { git = "https://github.com/emoon/rust_minifb.git", rev="daf54c4", default-features = false, features = ["x11"] }
i8080_core = { path = "./i8080_core"}