[package]
name = "si_emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.28.0"
i8080_core = { path = "i8080_core", default-features = false, features = ["log"]}
log = {version = "0.4.17", default-features = false}
simple_logger = "*"

[features]
default = ["log"]
log = []  